--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,34 @@
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
 body {
+    background: #0f0f1b;
     font-family: 'Roboto', sans-serif;
+    color: #fafbf6;
 }
 
 header {
-    display: block;
+    display: flex;
+    background: #565a75;
+    padding-left: 20px;
+}
+
+button{
+    background-color: transparent;
+    width: 100px;
+    height: 30%;
+    cursor: pointer;
+}
+
+img {
+    width: 125%;
+    height: auto;
+    padding-left: -10%;
+}
+
+h1 {
+    font-size: 40px;
 }
