--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,116 @@
-* {
+*{
+    margin: 0; 
     padding: 0;
-    margin: 0;
-    border: 0;
-}
-
-body {
-    background: #0f0f1b;
     font-family: 'Roboto', sans-serif;
-    color: #fafbf6;
 }
 
-header {
+.header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/banner.png);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+nav{
     display: flex;
-    background: #565a75;
-    padding-left: 20px;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
 }
 
-button{
-    background-color: transparent;
-    width: 100px;
-    height: 30%;
+nav img {
+    width: 400px;
+}
+
+.nav-links{
+    flex: 1;
+    text-align: right;
+}
+
+.nav-links ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.nav-links ul li::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-links ul li:hover::after {
+    width: 100%;
+}
+
+.text-box {
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.text-box h1 {
+    font-size: 62px;
+}
+
+.text-box p {
+    margin: 10px 0 40px;
+    font-size: 14px;
+    color: #fff;
+}
+
+.LearnMore {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
     cursor: pointer;
 }
 
-img {
-    width: 125%;
-    height: auto;
-    padding-left: -10%;
+.LearnMore:hover {
+    border: 1px solid #f44336;
+    background: #f44366;
+    transition: 1s;
 }
 
-h1 {
-    font-size: 40px;
+@media(max-width: 700px) {
+    .text-box h1{
+        font-size: 20px;
+    }
+
+    .nav-links ul li {
+        display: block;
+    }
+
+    .nav-links {
+        position: absolute;
+        background: #f44366;
+        height: 100vh; 
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
 }
